--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@typescript-eslint/parser": "^6.13.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
+    "prettier": "^3.1.1",
     "typescript": "^5"
   }
 }
