--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -4,7 +4,7 @@ bracketSpacing: true
 jsxSingleQuote: true
 printWidth: 80
 requirePragma: true
-semi: true
+semi: false
 singleQuote: true
 tabWidth: 2
 trailingComma: none
