--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@azure/msal-node": "^2.6.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
